--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="author" content="André Luiz Da Silva Lima">
     <meta name="description" content="Página simples para exibir meu porttifólio">
     <menu name="keywords" content="curriculo, html5, tecnologia, portifolio, java">
-    <link rel="stylesheet" href="/styles/estilo.css">
+    <link rel="stylesheet" href="styles/estilo.css">
 </head>
 <body>
         <header class="topo" >
