--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <meta name="author" content="André Luiz Da Silva Lima">
+    <meta name="description" content="Site simples para mostrar meu portifólio">
+    <meta name="keywords" content="java, portifólio, html, css, javascript, git, github">
     <link rel="stylesheet" href="styles/estilo.css">
 </head>
 <body>
         <header class="topo" >
         <nav>
             <ul>
-                <li><a href="#">GitHub</a></li>
-                <li><a href="#">LinkdIn</a></li>
+                <li><a href="https://github.com/Andre-LSL" target="_blank" >GitHub</a></li>
+                <li><a href="https://www.linkedin.com/in/andrelsl/" target="_blank" >LinkdIn</a></li>
             </ul>
         </nav>
         <div class="conteudoheader" >
@@ -25,8 +28,8 @@
                     <article>
                     <h2>Projetos</h2>
                     <p>Aplicação para processos e sistemas operacionais – Desenvolvimento de aplicações em Java para controle de rede, gerenciamento de processos e identificação de distribuições Linux. As soluções incluem configuração de IPs, testes de conectividade, listagem e encerramento de processos, além da detecção do sistema operacional.</p>
-                    <a href="https://github.com/Andre-LSL/Pjt-NetDialog.git">NetDiag</a>
-                    <a href="#" style="text-align: right;">Veja mais projetos</a>
+                    <a href="https://github.com/Andre-LSL/Pjt-NetDialog.git" target="_blank" >NetDiag</a>
+                    <a href="https://github.com/Andre-LSL?tab=repositories" target="_blank" style="text-align: right;">Veja mais projetos</a>
 
                 </article>
 
@@ -49,7 +52,7 @@
                         <li>Git/Github</li>
                     </ul>
 
-                    <p>Inglês | B2 | <a href="https://cert.efset.org/pt/FBLByw">Certificado</a></p>
+                    <p>Inglês | B2 | <a href="https://cert.efset.org/pt/FBLByw" target="_blank" >Certificado</a></p>
                 </article>
 
             </div>
