--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
         <header class="topo" >
-        <nav>
+        <nav class="teste">
             <ul>
                 <li><a href="https://github.com/Andre-LSL" target="_blank" >GitHub</a></li>
                 <li><a href="https://www.linkedin.com/in/andrelsl/" target="_blank" >LinkdIn</a></li>
@@ -59,7 +59,7 @@
         </main>
 
         <footer class="rodape">
-            Copyright © 2016
+            Copyright © 2025
         </footer>
 </body>
 </html>
