--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <p>Atuei auxiliando e instruindo alunos na resolução de problemas de lógica de programação, proporcionando suporte conceitual e prático. O foco principal foi a linguagem Java, abordando desde fundamentos da sintaxe até a aplicação de estruturas de controle e manipulação de dados.</p>
                 </article>
 
-                <article>
+                <article class="teste">
                     <h2>Certificações/Educação</h2>
                     <p>Análise e Desenvolvimento de Sistemas/Fatec – Zona Leste | Noturno | 4ºSemestre | 2023 – 2026</p>
                     <ul>
